css merge error

--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('./assets/Path\ 1.png');
+    background-image: url('./assets/p.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top right;
