--- a/todo/src/dashboard/dash.css
+++ b/todo/src/dashboard/dash.css
@@ -2,12 +2,21 @@
     height: 100vh;
     width: 100vw;
     background-color: #F6F6FB;
+
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+    
 }
 .card{
-    height: 100px;
-    height: 100px;
-    background-color: tomato;
-    -webkit-box-shadow: 0px 0px 13px 0px rgba(166, 166, 166, 1);
-    -moz-box-shadow: 0px 0px 13px 0px rgba(166, 166, 166, 1);
-    box-shadow: 0px 0px 13px 0px rgba(166, 166, 166, 1);
+    height: 150px;
+    width: 150px;  
+    /* margin: 5%; */
+    border-radius: 10px;
+    margin: 20px;
+    background-color: rgb(255, 255, 255);
+    -webkit-box-shadow: 0px 0px 2px 0px rgba(166, 166, 166, 1);
+    -moz-box-shadow: 0px 0px 2px 0px rgba(166, 166, 166, 1);
+    box-shadow: 0px 0px 2px 0px rgba(166, 166, 166, 1);
 }
